// Copyright 2024 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package lens.proto;

message LensOverlayInteractionResponse {
  // The suggest signals.
  optional string suggest_signals = 1;
}

message LensOverlayUrlResponse {
  // The side panel url to load.
  optional string url = 1;
}
